syntax = "proto3";

package ware;

option go_package = "proto_ware/";

service WareRpc {
  // wareinfo
  rpc GetWareInfoList(GetWareInfoListRequest) returns (GetWareInfoListResponse);
  rpc SaveWare(SaveWareRequest) returns (SaveWareResponse);

  rpc GetSkuWareInfo(GetSkuWareInfoRequest) returns (GetSkuWareInfoResponse);

  // purchaseDetail
  rpc GetPurchaseDetailInfo(GetPurchaseDetailInfoRequest)
      returns (GetPurchaseDetailInfoResponse);
  rpc SavePurchaseDetail(SavePurchaseDetailRequest)
      returns (SavePurchaseDetailResponse);

  // purchase
  rpc GetPurchaseList(GetPurchaseListRequest) returns (GetPurchaseListResponse);
  rpc SavePurcase(SavePurchaseRequest) returns (SavePurchaseResponse);
  rpc MergePurchase(MergePurchaseRequest) returns (MergePurchaseResponse);
  rpc GetUnReceivedPurchaseInfo(GetUnReceivedPurchaseInfoRequest)
      returns (GetUnReceivedPurchaseInfoResponse);
  rpc ReceivePurchase(ReceivePurchaseRequest) returns (ReceivePurchaseResponse);
  rpc UpdatePurchase(UpdatePurchaseRequest) returns (UpdatePurchaseResponse);
}

message UpdatePurchaseRequest {
  int32 id = 2;
  int32 assignee_id = 3;
  string assignee_name = 4;
  string phone = 5;
  int32 status = 6;
}

message UpdatePurchaseResponse {}
message GetPurchaseListRequest {
  int32 page_num = 1;  // 当前页码
  int32 page_size = 2; //每页记录数
  string keyword = 3;  //检索关键字
  string order = 4;    //排序方式
  string sidx = 5;     // 排序字段
}

message PurchaseEntity {
  int64 id = 1;
  int64 assignee_id = 2;
  string assignee_name = 3;
  string phone = 4;
  int32 priority = 5;
  int32 status = 6;
  int64 ware_id = 7;
  double amount = 8;
  string create_time = 9;
  string update_time = 10;
}
message GetPurchaseListResponse {
  int32 total_count = 2;
  repeated PurchaseEntity purchase_entities = 1;
}

message SavePurchaseRequest {
  int32 assignee_id = 2;
  string assignee_name = 3;
  string phone = 4;
  int32 priority = 5;
  int32 status = 6;
  int32 ware_id = 7;
  double amount = 8;
  string create_time = 9;
  string update_time = 10;
}

message SavePurchaseResponse {}
message SavePurchaseDetailRequest {
  int64 purchase_id = 2;
  int64 sku_id = 3;
  int64 sku_num = 4;
  double sku_price = 5;
  int32 ware_id = 6;
  int32 status = 7;
}
message SavePurchaseDetailResponse {}
message SaveWareRequest {
  string name = 2;
  string address = 3;
  string areacode = 4;
}
message SaveWareResponse {}
message GetWareInfoListRequest {
  int32 page_num = 1;  // 当前页码
  int32 page_size = 2; //每页记录数
  string keyword = 3;  //检索关键字
  string order = 4;    //排序方式
  string sidx = 5;     // 排序字段
}

message GetWareInfoListResponse {
  message List {
    int32 id = 1;
    string name = 2;
    string address = 3;
    string areacode = 4;
  }
  int32 total_count = 1;
  int32 page_size = 2;
  int32 total_page = 3;
  int32 curr_page = 4;
  repeated List list = 5;
}

message GetSkuWareInfoRequest {
  int32 page_num = 1;  // 当前页码
  int32 page_size = 2; //每页记录数
  string keyword = 3;  //检索关键字
  string order = 4;    //排序方式
  string sidx = 5;     // 排序字段
  int64 ware_id = 7;
  int64 sku_id = 8;
}

message GetSkuWareInfoResponse {
  message List {
    int32 id = 1;
    int32 sku_id = 2;
    int32 ware_id = 3;
    int32 stock = 4;
    string sku_name = 5;
    int32 stock_locked = 6;
  }

  int32 total_count = 1;
  int32 page_size = 2;
  int32 total_page = 3;
  int32 curr_page = 4;
  repeated List list = 5;
};

message GetPurchaseDetailInfoRequest {
  int32 page_num = 1;  // 当前页码
  int32 page_size = 2; //每页记录数
  string keyword = 3;  //检索关键字
  string order = 4;    //排序方式
  string sidx = 5;     // 排序字段
  int32 status = 6;
  int64 ware_id = 7;
}

message GetPurchaseDetailInfoResponse {
  message List {
    int32 id = 1;
    int32 purchase_id = 2;
    int32 sku_id = 3;
    int32 sku_num = 4;
    double sku_price = 5;
    int32 ware_id = 6;
    int32 status = 7;
  }

  int32 total_count = 1;
  int32 page_size = 2;
  int32 total_page = 3;
  int32 curr_page = 4;
  repeated List list = 5;
};
message MergePurchaseRequest {
  int64 purchase_id = 1;
  repeated int64 items = 2;
}
message MergePurchaseResponse {};
message GetUnReceivedPurchaseInfoRequest {}
message GetUnReceivedPurchaseInfoResponse {
  message List {
    int32 id = 1;
    int32 assignee_id = 2;
    string assignee_name = 3;
    string phone = 4;
    int32 priority = 5;
    int32 status = 6;
    int32 ware_id = 7;
    double amount = 8;
    string create_time = 9;
    string update_time = 10;
  }

  int32 total_count = 1;
  int32 page_size = 2;
  int32 total_page = 3;
  int32 curr_page = 4;
  repeated List list = 5;
};

message ReceivePurchaseRequest { repeated int64 items = 1; }

message ReceivePurchaseResponse {};